	Added new importcss_groups option to importcss plugin. Enables you separate classes into menu groups based on filters.
	Added new PastePreProcess/PastePostProcess events and reintroduced paste_preprocess/paste_postprocess paste options.
	Added new paste_word_valid_elements option lets you control what elements gets pasted when pasting from Word.
	Fixed bug where paste from word would remove all BR elements since it was missing in the default paste_word_valid_elements.
	Fixed issue with the tabpanel not expanding properly when the tabs where wider than the body of the panel.
	Fixed issue with the menubar option producing a JS exception if set to true.
	Fixed bug where linebreaks would be removed by paste plugin on IE since it didn't properly detect Word contents.
Version 4.0.6 (2013-09-12)
	Added new compat3x plugin that makes it possible to load most 3.x plugins. Only available in the development package.
	Added new skin_url option enables you to load local skins when using the CDN version.
	Added new theme_url option enables you to load local themes when using the CDN version.
	Added new importcss_file_filter option to importcss to enable users to specify what files to import from.
	Added new template_preview_replace_values option to template plugin to add example data for variables.
	Added image option support for addMenuItem calls. Enables you to provide a custom image for menu items.
	Fixed bug where editor.insertContent wouldn't set format and selection type on events.
	Fixed bug where inserting BR elements on IE 8 would thrown an exception when the range is at a empty text node.
	Fixed bug where outdent of single LI element within another LI would produce an empty list element OL/UL.
	Fixed bug where the bullist/numlist buttons wouldn't be deselected when deleting all contents.
	Fixed bug where toggling an empty list item off wouldn't produce a new empty block element.
	Fixed bug where it wasn't possible to apply lists to mixed text blocks and br lines.